# SnakeGameSample

./: CMakeLists.txt  LICENSE  README.md
include/: shaderProgram.hpp  shaderprogram.hpp  square.hpp
include/glad/: glad.h
shaders/: vertexshader.glsl
src/: glad.c  main.cpp  shaderProgram.cpp  square.cpp
